tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RewardchoicePers-AAAAAAAAAAAAAAAAAAAA2Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 217,
  "optional_prerequisites": [
    214,
    218
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Tired of mobs in your base? Want to build somewhere... different? Probably in a personal dimension? Then this is your chance. But choose wisely; You can only pick one option.\n\nWhen you first activate the portal, you can configure the world to your liking: it can be a void world, or any superflat world as long as it only consists of blocks such as grass, stone, cobblestone, bedrock, etc.\nBe careful! Once you configure the world, you can only change the cosmetic settings such as sky color by shift-right-clicking the portal.\nEditing world generation settings after the world is created is only possible if a server administrator unlocks it for you via the /pspace allow-worldgen-change DIMID command.\n\n[note]PS: The Last Millenium is also a void dimension you could use.[/note]\n\n§2If you're used to the buggy garden/void dimensions from UtilityWorlds, this is now a new mod that should resolve most of the previously known issues with blood magic, etc.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Reward choice: Personal Dimension",
    "party_single_reward": false,
    "quest_logic": "XOR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
