tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RocketFuel-AAAAAAAAAAAAAAAAAAADOw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 827,
  "prerequisites": [
    2744
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For every flight the rocket needs some fuel. So refine some fuel for your rocket.\nThis quest chain will guide you through the progression of rocket fuels.\n\nFor your T1 & T2 rockets you have 2 options. You can either use Cetane-Boosted Diesel or make RP-1 rocket fuel.\n\nFor the moon, a full rocket leaving from the Overworld should have enough fuel left to make it back, but you might want to take extra just in case.\n\n[note]Rocket Fuel usage is not based on the destination nor the type of fuel used. Rather, it is based on the tier of the rocket, with higher tiers both storing more fuel, and consuming less. Also, the gravity of the planet affects how much fuel is used, with lower gravity locations using less fuel to launch.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lRocket Fuel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2744
  ],
  "rewards": [],
  "tasks": []
}
