tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RocketTier4-AAAAAAAAAAAAAAAAAAAF_w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1535,
  "prerequisites": [
    1531
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After weeks of hard work and a thousand stacks of iTNT your fourth rocket is finally ready.\n\nYou need to use Dense Hydrazine Rocket Fuel.\n\n[note]In case you forgot to complete any, holding the rocket in your hand will unlock all pre-requisite quests in addition to this one.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Rocket Tier 4",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1531
  ],
  "rewards": [],
  "tasks": []
}
