tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RocketTier5-AAAAAAAAAAAAAAAAAAAGvg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1726,
  "prerequisites": [
    1728,
    1729,
    1730,
    1725,
    1727
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After a month of hard work and ten thousand stacks of iTNT your fifth rocket is finally ready.\n\nYou need to use CN3H7O3 (Purple) Rocket Fuel or better to fuel it.\n\n[note]In case you forgot to complete any, holding the rocket in your hand will unlock all pre-requisite quests in addition to this one.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Rocket Tier 5",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1728,
    1729,
    1730,
    1725,
    1727
  ],
  "rewards": [],
  "tasks": []
}
